examples/errors/missing-stage-as.dsl
stage package build {
  base chainguard { variant dev distro wolfi image "img" }
}
